--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /sciencenet_spider/sciencenet_spider_result/
 /ioz_ac_spider/ioz_ac_spider_result/
 /cwca_org_spider/cwca_org_spider_result/
+/kepu_net_spider/kepu_net_spider_result/
