--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /ioz_ac_spider/ioz_ac_spider_result/
 /cwca_org_spider/cwca_org_spider_result/
 /kepu_net_spider/kepu_net_spider_result/
+/biotech_org_spider/biotech_org_spider_result/
