测试通过，暂时作为模板没有问题

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /cwca_org_spider/cwca_org_spider_result/
 /kepu_net_spider/kepu_net_spider_result/
 /biotech_org_spider/biotech_org_spider_result/
+/genetics_ac_spider/genetics_ac_spider_result/
