模板更换，以whiov为模板，更新了保存的try方式，还有图片名字是否带http时的不同保存命名。

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /kepu_net_spider/kepu_net_spider_result/
 /biotech_org_spider/biotech_org_spider_result/
 /genetics_ac_spider/genetics_ac_spider_result/
+/whiov_ac_spider/whiov_ac_spider_result/
