增加网站ibp.cas同时修改细节

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /biotech_org_spider/biotech_org_spider_result/
 /genetics_ac_spider/genetics_ac_spider_result/
 /whiov_ac_spider/whiov_ac_spider_result/
+/ibp_cas_spider/ibp_cas_spider_result/
