cern_ac_spider爬取完毕，同时修改细节

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /genetics_ac_spider/genetics_ac_spider_result/
 /whiov_ac_spider/whiov_ac_spider_result/
 /ibp_cas_spider/ibp_cas_spider_result/
+/cern_ac_spider/cern_ac_spider_result/
