bioo部分爬取脚本修改完毕

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /ibp_cas_spider/ibp_cas_spider_result/
 /cern_ac_spider/cern_ac_spider_result/
 /ebiotrade_spider/ebiotrade_spider_result
+/bioon_spider/bioon_spider_result
