--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /WorkSpider/cern_ac_spider/cern_ac_spider_result/
 /WorkSpider/ebiotrade_spider/ebiotrade_spider_result/
 /WorkSpider/bioon_spider/bioon_spider_result/
+/WorkSpider/ibioo_spider/ibioo_spider_result/
