--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /WorkSpider/ebiotrade_spider/ebiotrade_spider_result/
 /WorkSpider/bioon_spider/bioon_spider_result/
 /WorkSpider/ibioo_spider/ibioo_spider_result/
+/WorkSpider/bio360_spider/bio360_spider_result/
