基本写完，还需测试

--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,5 @@
 /WorkSpider/bioon_spider/bioon_spider_result/
 /WorkSpider/ibioo_spider/ibioo_spider_result/
 /WorkSpider/bio360_spider/bio360_spider_result/
+/WorkSpider/zgzbao_spider/zgzbao_spider_result/
 /MySpider/tumblr_spider/tumblr_user_likes_spider_result/
