--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /WorkSpider/bio360_spider/bio360_spider_result/
 /WorkSpider/zgzbao_spider/zgzbao_spider_result/
 /MySpider/tumblr_spider/tumblr_user_likes_spider_result/
+/WorkSpider/im_cas_spider/im_cas_spider_result/
