测试通过，还未增加第二版

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /WorkSpider/zgzbao_spider/zgzbao_spider_result/
 /MySpider/tumblr_spider/tumblr_user_likes_spider_result/
 /WorkSpider/im_cas_spider/im_cas_spider_result/
+/WorkSpider/scib_cas_spider/scib_cas_spider_result/
