--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,9 +4,16 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "echo",
-            "type": "shell",
-            "command": "echo Hello"
+            // "label": "python",
+            // "type": "shell",
+            // "command": "C:/Users/yanta/AppData/Local/Programs/Python/Python36/python",
+            // "args": [
+            //     "${file}"
+            // ],
+            // "group": {
+            //     "kind": "build",
+            //     "isDefault": true
+            }
         }
     ]
 }
