--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /MySpider/tumblr_spider/tumblr_user_likes_spider_result/
 /WorkSpider/im_cas_spider/im_cas_spider_result/
 /WorkSpider/scib_cas_spider/scib_cas_spider_result/
+/WorkSpider/bnbio_spider/bnbio_spider_result/
