--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /WorkSpider/im_cas_spider/im_cas_spider_result/
 /WorkSpider/scib_cas_spider/scib_cas_spider_result/
 /WorkSpider/bnbio_spider/bnbio_spider_result/
+/WorkSpider/biobw_org_spider/biobw_org_spider_result/
