--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /WorkSpider/scib_cas_spider/scib_cas_spider_result/
 /WorkSpider/bnbio_spider/bnbio_spider_result/
 /WorkSpider/biobw_org_spider/biobw_org_spider_result/
+/WorkSpider/skmn_fudan_spider/skmn_fudan_spider_result/
