编写完毕，上传完成，文章爬取模块测试通过

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /WorkSpider/bnbio_spider/bnbio_spider_result/
 /WorkSpider/biobw_org_spider/biobw_org_spider_result/
 /WorkSpider/skmn_fudan_spider/skmn_fudan_spider_result/
+/WorkSpider/shmc_fudan_spider/shmc_fudan_spider_result/
