编写完毕，测试通过

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 /WorkSpider/skmn_fudan_spider/skmn_fudan_spider_result/
 /WorkSpider/shmc_fudan_spider/shmc_fudan_spider_result/
 /WorkSpider/cscb_org_spider/cscb_org_spider_result/
+/WorkSpider/sippe_ac_spider/sippe_ac_spider_result/
