编写完毕，上传完成

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@
 /WorkSpider/shmc_fudan_spider/shmc_fudan_spider_result/
 /WorkSpider/cscb_org_spider/cscb_org_spider_result/
 /WorkSpider/sippe_ac_spider/sippe_ac_spider_result/
+/WorkSpider/nibs_ac_spider/nibs_ac_spider_result/
