编写完成，上传完毕

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@
 /WorkSpider/cscb_org_spider/cscb_org_spider_result/
 /WorkSpider/sippe_ac_spider/sippe_ac_spider_result/
 /WorkSpider/nibs_ac_spider/nibs_ac_spider_result/
+/WorkSpider/simm_ac_spider/simm_ac_spider_result/
