--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+*.pyc
 /WorkSpider/sciencenet_spider/sciencenet_spider_result/
 /WorkSpider/ioz_ac_spider/ioz_ac_spider_result/
 /WorkSpider/cwca_org_spider/cwca_org_spider_result/
