--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@
 /WorkSpider/simm_ac_spider/simm_ac_spider_result/
 /WorkSpider/sibcb_ac_spider/sibcb_ac_spider_result/
 /WorkSpider/rcees_cas_spider/rcees_cas_spider_result/
+/WorkSpider/sinh_cas_spider/sinh_cas_spider_result/
