--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@
 /WorkSpider/rcees_cas_spider/rcees_cas_spider_result/
 /WorkSpider/sinh_cas_spider/sinh_cas_spider_result/
 /WorkSpider/medicine_fudan_edu_spider/medicine_fudan_edu_spider_result/
+/WorkSpider/pumch_spider/pumch_spider_result/
