--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@
 /WorkSpider/sinh_cas_spider/sinh_cas_spider_result/
 /WorkSpider/medicine_fudan_edu_spider/medicine_fudan_edu_spider_result/
 /WorkSpider/pumch_spider/pumch_spider_result/
+/WorkSpider/sbms_bjmu_edu_spider/sbms_bjmu_edu_spider_result/
