完成，上传完毕

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@
 /WorkSpider/medicine_fudan_edu_spider/medicine_fudan_edu_spider_result/
 /WorkSpider/pumch_spider/pumch_spider_result/
 /WorkSpider/sbms_bjmu_edu_spider/sbms_bjmu_edu_spider_result/
+/WorkSpider/life_fudan_spider/life_fudan_spider_result/
+/WorkSpider/shanghaitech_edu_spider/shanghaitech_edu_spider_result/
