--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@
 /WorkSpider/sbms_bjmu_edu_spider/sbms_bjmu_edu_spider_result/
 /WorkSpider/life_fudan_spider/life_fudan_spider_result/
 /WorkSpider/shanghaitech_edu_spider/shanghaitech_edu_spider_result/
+/WorkSpider/bio_pku_edu_spider/bio_pku_edu_spider_result/
