完成，上传完毕

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@
 /WorkSpider/life_fudan_spider/life_fudan_spider_result/
 /WorkSpider/shanghaitech_edu_spider/shanghaitech_edu_spider_result/
 /WorkSpider/bio_pku_edu_spider/bio_pku_edu_spider_result/
+/WorkSpider/med_tsinghua_edu_spider/med_tsinghua_edu_spider_result/
+/WorkSpider/life_tsinghua_edu_spider/life_tsinghua_edu_spider_result/
