完成，上传完毕

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@
 /WorkSpider/bio_pku_edu_spider/bio_pku_edu_spider_result/
 /WorkSpider/med_tsinghua_edu_spider/med_tsinghua_edu_spider_result/
 /WorkSpider/life_tsinghua_edu_spider/life_tsinghua_edu_spider_result/
+/WorkSpider/icsb_tsinghua_edu_spider/icsb_tsinghua_edu_spider_result/
