--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@
 /WorkSpider/med_tsinghua_edu_spider/med_tsinghua_edu_spider_result/
 /WorkSpider/life_tsinghua_edu_spider/life_tsinghua_edu_spider_result/
 /WorkSpider/icsb_tsinghua_edu_spider/icsb_tsinghua_edu_spider_result/
+/WorkSpider/biox_ustc_edu_spider/biox_ustc_edu_spider_result/
