完成，上传完毕

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@
 /WorkSpider/life_tsinghua_edu_spider/life_tsinghua_edu_spider_result/
 /WorkSpider/icsb_tsinghua_edu_spider/icsb_tsinghua_edu_spider_result/
 /WorkSpider/biox_ustc_edu_spider/biox_ustc_edu_spider_result/
+/WorkSpider/ibs_fudan_edu_spider/ibs_fudan_edu_spider_result/
