完成，上传完毕

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@
 /WorkSpider/icsb_tsinghua_edu_spider/icsb_tsinghua_edu_spider_result/
 /WorkSpider/biox_ustc_edu_spider/biox_ustc_edu_spider_result/
 /WorkSpider/ibs_fudan_edu_spider/ibs_fudan_edu_spider_result/
+/WorkSpider/ipmb_sinica_edu_tw_spider/ipmb_sinica_edu_tw_spider_result/
