完成，上传完毕

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@
 /WorkSpider/biox_ustc_edu_spider/biox_ustc_edu_spider_result/
 /WorkSpider/ibs_fudan_edu_spider/ibs_fudan_edu_spider_result/
 /WorkSpider/ipmb_sinica_edu_tw_spider/ipmb_sinica_edu_tw_spider_result/
+/WorkSpider/icob_sinica_edu_tw_spider/icob_sinica_edu_tw_spider_result/
