--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@
 /WorkSpider/ibs_fudan_edu_spider/ibs_fudan_edu_spider_result/
 /WorkSpider/ipmb_sinica_edu_tw_spider/ipmb_sinica_edu_tw_spider_result/
 /WorkSpider/icob_sinica_edu_tw_spider/icob_sinica_edu_tw_spider_result/
+/Python3WebSpider/CrackGeetest/cut.jpg
+/Python3WebSpider/CrackGeetest/full.jpg
