写完，还需测试

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@
 /WorkSpider/icob_sinica_edu_tw_spider/icob_sinica_edu_tw_spider_result/
 /Python3WebSpider/CrackGeetest/cut.jpg
 /Python3WebSpider/CrackGeetest/full.jpg
+/Python3WebSpider/CrackGeetest/cut_img
+/Python3WebSpider/CrackGeetest/full_img
