暂时先这样吧

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@
 /Python3WebSpider/CrackGeetest/cut.jpg
 /Python3WebSpider/CrackGeetest/full.jpg
 /Python3WebSpider/CrackGeetest/*.jpg
+/Python3WebSpider/CrackGeetest/*.png
