--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "git.ignoreLimitWarning": true,
-    "python.pythonPath": "D:\\program\\program_essential\\Python36\\virtualenv\\spider_env\\Scripts\\python.exe"
+    "python.pythonPath": "D:\\program\\program_essential\\Python36\\python.exe"
 }
