--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,17 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
+        {
+            "name": "Scrapy",
+            "type": "python",
+            "request": "launch",
+            "module": "scrapy",
+            "args": [
+                "crawl",
+                "itcast"
+            ],
+        },
+
         {
             "name": "Python: Current File",
             "type": "python",
